Fixed wrong color

--- a/style.css
+++ b/style.css
@@ -189,6 +189,10 @@ a:active {
   background-position: center center;
 }
 
+.hero-headline {
+  color: white;
+}
+
 p {
   line-height: 1.3;
   margin-bottom: 1rem;
